# ComfyUI

./: pyproject.toml
.github/workflows/: sdist.yml
.refactor/: refactor.py
comfyui/: __init__.py  cuda_malloc.py  execution.py  folder_paths.py  latent_preview.py  main.py  node_helpers.py  nodes.py  server.py
comfyui/api_server/routes/internal/: internal_routes.py
comfyui/api_server/services/: file_service.py  terminal_service.py
comfyui/app/: frontend_management.py  user_manager.py
comfyui/comfy/: cli_args.py  clip_model.py  clip_vision.py  conds.py  controlnet.py  diffusers_load.py  gligen.py  lora.py  model_base.py  model_detection.py  model_management.py  model_patcher.py  model_sampling.py  ops.py  sample.py  sampler_helpers.py  samplers.py  sd.py  sd1_clip.py  sdxl_clip.py  supported_models.py  utils.py
comfyui/comfy/cldm/: cldm.py  dit_embedder.py  mmdit.py
comfyui/comfy/k_diffusion/: sampling.py
comfyui/comfy/ldm/: common_dit.py
comfyui/comfy/ldm/audio/: autoencoder.py  dit.py  embedders.py
comfyui/comfy/ldm/aura/: mmdit.py
comfyui/comfy/ldm/cascade/: common.py
comfyui/comfy/ldm/flux/: controlnet.py  layers.py  math.py  model.py  redux.py
comfyui/comfy/ldm/hydit/: attn_layers.py  controlnet.py  models.py  poolers.py
comfyui/comfy/ldm/lightricks/: model.py
comfyui/comfy/taesd/: taesd.py
comfyui/comfy/text_encoders/: aura_t5.py  bert.py  flux.py  genmo.py  hydit.py  long_clipl.py  lt.py  sa_t5.py  sd2_clip.py  sd3_clip.py  t5.py
comfyui/comfy_execution/: caching.py  graph.py
comfyui/comfy_extras/: nodes_advanced_samplers.py  nodes_audio.py  nodes_canny.py  nodes_clip_sdxl.py  nodes_compositing.py  nodes_controlnet.py  nodes_custom_sampler.py  nodes_flux.py  nodes_hypernetwork.py  nodes_images.py  nodes_latent.py  nodes_lora_extract.py  nodes_lt.py  nodes_mask.py  nodes_mochi.py  nodes_model_advanced.py  nodes_model_downscale.py  nodes_model_merging.py  nodes_model_merging_model_specific.py  nodes_morphology.py  nodes_pag.py  nodes_perpneg.py  nodes_photomaker.py  nodes_post_processing.py  nodes_sag.py  nodes_sd3.py  nodes_sdupscale.py  nodes_slg.py  nodes_stable3d.py  nodes_stable_cascade.py  nodes_upscale_model.py  nodes_video_model.py  nodes_webcam.py
comfyui/model_filemanager/: download_models.py
comfyui/utils/: extra_config.py
custom_nodes/: websocket_image_save.py
tests-unit/app_test/: frontend_manager_test.py
tests-unit/comfy_test/: folder_path_test.py
tests-unit/folder_paths_test/: filter_by_content_types_test.py
tests-unit/prompt_server_test/: download_models_test.py  user_manager_test.py
tests-unit/server/routes/: internal_routes_test.py
tests-unit/server/services/: file_service_test.py
tests-unit/server/utils/: file_operations_test.py
tests-unit/utils/: extra_config_test.py
tests/inference/: test_execution.py  test_inference.py
(+17 files in other folders)
